--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,13 +2,13 @@ name: Deno app build and testing
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
   deno:
-    runs-on: ubuntu-latest
+    runs-on: ["ubuntu-latest", "windows-latest"]
     timeout-minutes: 5
 
     steps:
