--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deno:
-    runs-on: ["ubuntu-latest", "windows-latest"]
+    runs-on: ubuntu-latest
     timeout-minutes: 5
 
     steps:
